# commonlibrary_rust_ylong_runtime

./: Cargo.toml  OAT.xml  README.en.md  README.md  README_en.md  README_zh.md  RELEASE_NOTES.md  bundle.json
docs/: user_guide.md
patches/: patches.json  productdefine.patch
ylong_ffrt/: Cargo.toml  build.rs  build_ffrt.rs
ylong_ffrt/src/: condition_variable.rs  config.rs  deadline.rs  lib.rs  mutex.rs  sleep.rs  sys_event.rs  task.rs  thread.rs
ylong_io/: BUILD.gn  Cargo.toml  README.md
ylong_io/examples/: ylong_io_tcp_client.rs  ylong_io_tcp_server.rs
ylong_io/src/: interest.rs  lib.rs  poll.rs  source.rs  token.rs  waker.rs
ylong_io/src/sys/: events.rs  mod.rs
ylong_io/src/sys/linux/: epoll.rs  events.rs  mod.rs  socket_addr.rs  waker.rs
ylong_io/src/sys/linux/tcp/: listener.rs  mod.rs  socket.rs  stream.rs
ylong_io/src/sys/linux/udp/: mod.rs  socket.rs  udp_socket.rs
ylong_io/src/sys/linux/uipc/: mod.rs
ylong_io/src/sys/windows/: afd.rs  events.rs  handle.rs  io_status_block.rs  iocp.rs  mod.rs  net.rs  overlapped.rs  selector.rs  socket_addr.rs  waker.rs
ylong_io/src/sys/windows/tcp/: listener.rs  mod.rs  socket.rs  stream.rs
ylong_io/src/sys/windows/udp/: mod.rs  socket.rs  udp_socket.rs
ylong_io/tests/: udp_socket_test.rs
ylong_runtime/: BUILD.gn  Cargo.toml  README.md  README_zh.md
ylong_runtime/benches/: sync_benchmarks.rs  ylong_tokio_async_file.rs  ylong_tokio_multi_threaded.rs  ylong_tokio_mutex.rs  ylong_tokio_rwlock.rs  ylong_tokio_schedule.rs  ylong_tokio_tcp.rs  ylong_tokio_udp.rs
ylong_runtime/benches/task_helpers/: mod.rs
ylong_runtime/examples/: ylong_runtime_basic.rs  ylong_runtime_memory.rs  ylong_runtime_multi_runtimes.rs  ylong_runtime_par_iter.rs  ylong_runtime_short_block.rs  ylong_runtime_tcp.rs  ylong_runtime_timer_sleep.rs  ylong_tokio_schedule.rs
ylong_runtime/src/: error.rs  futures.rs  lib.rs  macros.rs  schedule_io.rs  select.rs  spawn.rs
ylong_runtime/src/builder/: common_builder.rs  current_thread_builder.rs  mod.rs  multi_thread_builder.rs
ylong_runtime/src/executor/: async_pool.rs  block_on.rs  blocking_pool.rs  current_thread.rs  mod.rs  netpoller.rs  parker.rs  queue.rs  sleeper.rs  worker.rs
ylong_runtime/src/ffrt/: ffrt_task.rs  mod.rs  spawner.rs
ylong_runtime/src/fs/: async_dir.rs  async_file.rs  file_buf.rs  mod.rs  open_options.rs
ylong_runtime/src/io/: async_buf_read.rs  async_read.rs  async_seek.rs  async_write.rs  mod.rs  read_buf.rs  read_task.rs  seek_task.rs  write_task.rs
ylong_runtime/src/io/buffered/: async_buf_reader.rs  async_buf_writer.rs  mod.rs
ylong_runtime/src/iter/: core.rs  mod.rs  prelude.rs
ylong_runtime/src/iter/parallel/: array.rs  mod.rs  slice.rs  vec.rs
ylong_runtime/src/iter/parallel/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  mod.rs  vec_deque.rs
ylong_runtime/src/iter/pariter/: filter.rs  for_each.rs  map.rs  mod.rs  sum.rs  zip.rs
ylong_runtime/src/net/: async_source.rs  driver.rs  linked_list.rs  mod.rs  ready.rs
ylong_runtime/src/net/sys/: mod.rs  udp.rs
ylong_runtime/src/net/sys/tcp/: listener.rs  mod.rs  stream.rs
ylong_runtime/src/sync/: atomic_waker.rs  error.rs  mod.rs  mutex.rs  oneshot.rs  rwlock.rs  semaphore.rs  semaphore_inner.rs  waiter.rs  wake_list.rs
ylong_runtime/src/sync/mpsc/: array.rs  bounded.rs  channel.rs  mod.rs  queue.rs  unbounded.rs
ylong_runtime/src/task/: builder.rs  join_handle.rs  join_set.rs  mod.rs  raw.rs  state.rs  task_handle.rs  waker.rs  yield_now.rs
ylong_runtime/src/time/: driver.rs  error.rs  mod.rs  sleep.rs  timeout.rs  timer.rs  timer_handle.rs  wheel.rs
ylong_runtime/src/util/: bit.rs  fastrand.rs  link_list.rs  mod.rs  slab.rs  slots.rs
ylong_runtime/src/util/core_affinity/: linux.rs  mod.rs  windows.rs
ylong_runtime/src/util/num_cpus/: linux.rs  mod.rs  windows.rs
ylong_runtime/tests/: async_buf_read.rs  async_buf_write.rs  async_dir.rs  async_fs.rs  async_pool.rs  async_read.rs  block_on.rs  builder.rs  core_affinity.rs  join_set.rs  mpsc_test.rs  mutex.rs  num_cpus.rs  par_iter.rs  semaphore_test.rs  singleton_runtime.rs  slab.rs  slots.rs  spawn.rs  spawn_blocking.rs  sync.rs  task_cancel.rs  tcp_test.rs  timer_test.rs  udp_test.rs
ylong_runtime/tests/helpers/: mod.rs
ylong_runtime_macros/: Cargo.toml  README_en.md
ylong_runtime_macros/examples/: macro_tuple_form.rs
ylong_runtime_macros/src/: entry.rs  lib.rs  select.rs
