# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

ohos_rust_shared_library("lib") {
  crate_name = "ylong_runtime"
  crate_type = "dylib"
  crate_root = "src/lib.rs"

  part_name = "ylong_runtime_mod"
  subsystem_name = "commonlibrary"

  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [
    "//commonlibrary/rust/ylong_runtime/ylong_io:ylong_io",
    "//third_party/rust/crates/libc:lib",
  ]
  features = [
    "net",
    "sync",
    "fs",
    "time",
  ]
}

ohos_rust_unittest("rust_ylong_runtime_unit_test") {
  module_out_path = "commonlibrary/rust/ylong_runtime"
  sources = [ "src/lib.rs" ]
  deps = [
    "//commonlibrary/rust/ylong_runtime/ylong_io:ylong_io",
    "//commonlibrary/rust/ylong_runtime/ylong_runtime:lib",
    "//third_party/rust/crates/libc:lib",
  ]
  clippy_lints = "none"

  rustflags = [
    "--cfg=feature=\"time\"",
    "--cfg=feature=\"sync\"",
    "--cfg=feature=\"fs\"",
    "--cfg=feature=\"net\"",
  ]
}
